feat(html): build card structure

--- a/index.html
+++ b/index.html
@@ -22,6 +22,41 @@
     />
   </head>
   <body>
+    <main class="card">
+      <picture>
+        <img
+          src="./assets/illustration-woman-online-mobile.svg"
+          alt="Woman Online"
+        />
+      </picture>
+      <picture>
+        <img src="./assets/bg-pattern-mobile.svg" alt="Shadow pattern" />
+      </picture>
+      <h1 class="card__header">FAQ</h1>
+      <section class="accordion">
+        <p class="accordion__title">How many team members can I invite?</p>
+        <p class="accordion__content"></p>
+      </section>
+      <section class="accordion">
+        <p class="accordion__title">What is the maximum file upload size?</p>
+        <p class="accordion__content">
+          <!-- No more than 2GB. All files in your account must fit your allotted
+          storage space. -->
+        </p>
+      </section>
+      <section class="accordion">
+        <p class="accordion__title">How do I reset my password?</p>
+        <p class="accordion__content"></p>
+      </section>
+      <section class="accordion">
+        <p class="accordion__title">Can I cancel my subscription?</p>
+        <p class="accordion__content"></p>
+      </section>
+      <section class="accordion">
+        <p class="accordion__title">Do you provide additional support?</p>
+        <p class="accordion__content"></p>
+      </section>
+    </main>
     <script src="./index.js"></script>
   </body>
 </html>
