--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <section class="accordion">
         <p class="accordion__title">What is the maximum file upload size?</p>
         <p class="accordion__content">
-          <!-- No more than 2GB. All files in your account must fit your allotted
-          storage space. -->
+          No more than 2GB. All files in your account must fit your allotted
+          storage space.
         </p>
       </section>
       <section class="accordion">
