feat(card): align card image

--- a/index.html
+++ b/index.html
@@ -23,15 +23,22 @@
   </head>
   <body>
     <main class="card">
-      <picture>
-        <img
-          src="./assets/illustration-woman-online-mobile.svg"
-          alt="Woman Online"
-        />
-      </picture>
-      <picture>
-        <img src="./assets/bg-pattern-mobile.svg" alt="Shadow pattern" />
-      </picture>
+      <div class="card__image">
+        <picture>
+          <img
+            src="./assets/illustration-woman-online-mobile.svg"
+            alt="Woman Online"
+            class="card__image--woman"
+          />
+        </picture>
+        <picture>
+          <img
+            src="./assets/bg-pattern-mobile.svg"
+            alt="Shadow pattern"
+            class="card__image--shadow"
+          />
+        </picture>
+      </div>
       <h1 class="card__header">FAQ</h1>
       <section class="accordion">
         <p class="accordion__title">How many team members can I invite?</p>
