refactor(html): wrap card content inside a div tag

--- a/index.html
+++ b/index.html
@@ -39,30 +39,32 @@
           />
         </picture>
       </div>
-      <h1 class="card__header">FAQ</h1>
-      <section class="accordion">
-        <p class="accordion__title">How many team members can I invite?</p>
-        <p class="accordion__content"></p>
-      </section>
-      <section class="accordion">
-        <p class="accordion__title">What is the maximum file upload size?</p>
-        <p class="accordion__content">
-          No more than 2GB. All files in your account must fit your allotted
-          storage space.
-        </p>
-      </section>
-      <section class="accordion">
-        <p class="accordion__title">How do I reset my password?</p>
-        <p class="accordion__content"></p>
-      </section>
-      <section class="accordion">
-        <p class="accordion__title">Can I cancel my subscription?</p>
-        <p class="accordion__content"></p>
-      </section>
-      <section class="accordion">
-        <p class="accordion__title">Do you provide additional support?</p>
-        <p class="accordion__content"></p>
-      </section>
+      <div class="card__content">
+        <h1 class="card__header">FAQ</h1>
+        <section class="accordion">
+          <p class="accordion__title">How many team members can I invite?</p>
+          <p class="accordion__content"></p>
+        </section>
+        <section class="accordion">
+          <p class="accordion__title">What is the maximum file upload size?</p>
+          <p class="accordion__content">
+            No more than 2GB. All files in your account must fit your allotted
+            storage space.
+          </p>
+        </section>
+        <section class="accordion">
+          <p class="accordion__title">How do I reset my password?</p>
+          <p class="accordion__content"></p>
+        </section>
+        <section class="accordion">
+          <p class="accordion__title">Can I cancel my subscription?</p>
+          <p class="accordion__content"></p>
+        </section>
+        <section class="accordion">
+          <p class="accordion__title">Do you provide additional support?</p>
+          <p class="accordion__content"></p>
+        </section>
+      </div>
     </main>
     <script src="./index.js"></script>
   </body>
