responsive(card): change image by the viewport width

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <main class="card">
       <div class="card__image">
         <picture>
+          <source
+            sizes="(min-width: 375px)"
+            srcset="./assets/illustration-woman-online-desktop.svg"
+          />
           <img
             src="./assets/illustration-woman-online-mobile.svg"
             alt="Woman Online"
@@ -32,6 +36,10 @@
           />
         </picture>
         <picture>
+          <source
+            sizes="(min-width: 375px)"
+            srcset="./assets/bg-pattern-desktop.svg"
+          />
           <img
             src="./assets/bg-pattern-mobile.svg"
             alt="Shadow pattern"
