fix(card): image didn't change when changing widths

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="card__image">
         <picture>
           <source
-            sizes="(min-width: 375px)"
+            media="(min-width: 376px)"
             srcset="./assets/illustration-woman-online-desktop.svg"
           />
           <img
@@ -37,7 +37,7 @@
         </picture>
         <picture>
           <source
-            sizes="(min-width: 375px)"
+            media="(min-width: 376px)"
             srcset="./assets/bg-pattern-desktop.svg"
           />
           <img
